modify: desctop refined with peddings, removed box-shadow, spacings are more correct

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: rgba(255, 255, 255, 1);
-
+  background-color: #ffffff;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -32,7 +31,6 @@
   .card {
     background-color: var(--color-product-card);
     border-radius: 10px;
-    box-shadow: var(--shadow-xl);
     border: 1px solid rgba(225, 234, 246, 1);
     color: black;
     margin-left: auto;
